--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,17 @@ version: 2.1
 # See: https://circleci.com/docs/2.0/orb-intro/
 orbs:
   node: circleci/node@4.7
+  azure-cli: circleci/azure-cli@1.0.0
 
+jobs: 
+  verify-az-install:
+    executor: azure-cli/default
+    steps: 
+      - azure-cli/install
+      -run:
+        command: az -v
+        name: Verify azure CLI is installed
+  
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
@@ -19,3 +29,7 @@ workflows:
           version: '16.10'
           # If you are using yarn, change the line below from "npm" to "yarn"
           pkg-manager: npm
+      - node/run:
+          npm-run: build
+      - verify-az-install
+      
